src/PoeFilterParser/Model/PoeFilterParser.cs
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;

#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace PoeFilterParser.Model
{
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5-SNAPSHOT")]
    public partial class PoeFilterParser : Parser
    {
        public const int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, COMMENT = 17,
            WS = 18, DIGITS = 19, COMPAREOP = 20, RARITY = 21, SHOW = 22, HIDE = 23, SOCKET = 24,
            QUOTESOCKET = 25, QUOTERARITY = 26, STR = 27, QUOTESTR = 28;

        public const int
            RULE_strValue = 0, RULE_socketValue = 1, RULE_rarityValue = 2, RULE_compareOpNullable = 3,
            RULE_visibility = 4, RULE_params = 5, RULE_digitsParams = 6, RULE_rariryParams = 7,
            RULE_socketParams = 8, RULE_red = 9, RULE_green = 10, RULE_blue = 11,
            RULE_alpha = 12, RULE_color = 13, RULE_poeClass = 14, RULE_poeBaseType = 15,
            RULE_poeFontSize = 16, RULE_poeTextColor = 17, RULE_poeBackgroundColor = 18,
            RULE_poeBorderColor = 19, RULE_poeAlertSound = 20, RULE_poeRarity = 21,
            RULE_poeSocketGroup = 22, RULE_poeLinkedSockets = 23, RULE_poeSockets = 24,
            RULE_poeItemLevel = 25, RULE_poeDropLevel = 26, RULE_poeQuality = 27,
            RULE_poeWidth = 28, RULE_poeHeight = 29, RULE_statement = 30, RULE_block = 31,
            RULE_main = 32;

        public static readonly string[] ruleNames = {
        "strValue", "socketValue", "rarityValue", "compareOpNullable", "visibility",
        "params", "digitsParams", "rariryParams", "socketParams", "red", "green",
        "blue", "alpha", "color", "poeClass", "poeBaseType", "poeFontSize", "poeTextColor",
        "poeBackgroundColor", "poeBorderColor", "poeAlertSound", "poeRarity",
        "poeSocketGroup", "poeLinkedSockets", "poeSockets", "poeItemLevel", "poeDropLevel",
        "poeQuality", "poeWidth", "poeHeight", "statement", "block", "main"
    };

        private static readonly string[] _LiteralNames = {
        null, "'Class'", "'BaseType'", "'SetFontSize'", "'SetTextColor'", "'SetBackgroundColor'",
        "'SetBorderColor'", "'PlayAlertSound'", "'Rarity'", "'SocketGroup'", "'LinkedSockets'",
        "'Sockets'", "'ItemLevel'", "'DropLevel'", "'Quality'", "'Width'", "'Height'",
        null, null, null, null, null, "'Show'", "'Hide'"
    };

        private static readonly string[] _SymbolicNames = {
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, "COMMENT", "WS", "DIGITS", "COMPAREOP",
        "RARITY", "SHOW", "HIDE", "SOCKET", "QUOTESOCKET", "QUOTERARITY", "STR",
        "QUOTESTR"
    };

        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [System.Obsolete("Use Vocabulary instead.")]
        public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

        private static string[] GenerateTokenNames(IVocabulary vocabulary, int length)
        {
            string[] tokenNames = new string[length];
            for (int i = 0; i < tokenNames.Length; i++)
            {
                tokenNames[i] = vocabulary.GetLiteralName(i);
                if (tokenNames[i] == null)
                {
                    tokenNames[i] = vocabulary.GetSymbolicName(i);
                }

                if (tokenNames[i] == null)
                {
                    tokenNames[i] = "<INVALID>";
                }
            }

            return tokenNames;
        }

        [System.Obsolete]
        public override string[] TokenNames
        {
            get
            {
                return tokenNames;
            }
        }

        [NotNull]
        public override IVocabulary Vocabulary
        {
            get
            {
                return DefaultVocabulary;
            }
        }

        public override string GrammarFileName { get { return "PoeFilter.g4"; } }

        public override string[] RuleNames { get { return ruleNames; } }

        public override string SerializedAtn { get { return _serializedATN; } }

        public PoeFilterParser(ITokenStream input)
            : base(input)
        {
            _interp = new ParserATNSimulator(this, _ATN);
        }

        public partial class StrValueContext : ParserRuleContext
        {
            public ITerminalNode QUOTESTR()
            {
                return GetToken(PoeFilterParser.QUOTESTR, 0);
            }

            public ITerminalNode STR()
            {
                return GetToken(PoeFilterParser.STR, 0);
            }

            public StrValueContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_strValue; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterStrValue(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitStrValue(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitStrValue(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public StrValueContext strValue()
        {
            StrValueContext _localctx = new StrValueContext(_ctx, State);
            EnterRule(_localctx, 0, RULE_strValue);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 66;
                    _la = _input.La(1);
                    if (!(_la == STR || _la == QUOTESTR))
                    {
                        _errHandler.RecoverInline(this);
                    }
                    else
                    {
                        Consume();
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SocketValueContext : ParserRuleContext
        {
            public ITerminalNode QUOTESOCKET()
            {
                return GetToken(PoeFilterParser.QUOTESOCKET, 0);
            }

            public ITerminalNode SOCKET()
            {
                return GetToken(PoeFilterParser.SOCKET, 0);
            }

            public SocketValueContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_socketValue; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterSocketValue(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitSocketValue(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSocketValue(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SocketValueContext socketValue()
        {
            SocketValueContext _localctx = new SocketValueContext(_ctx, State);
            EnterRule(_localctx, 2, RULE_socketValue);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 68;
                    _la = _input.La(1);
                    if (!(_la == SOCKET || _la == QUOTESOCKET))
                    {
                        _errHandler.RecoverInline(this);
                    }
                    else
                    {
                        Consume();
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class RarityValueContext : ParserRuleContext
        {
            public ITerminalNode QUOTERARITY()
            {
                return GetToken(PoeFilterParser.QUOTERARITY, 0);
            }

            public ITerminalNode RARITY()
            {
                return GetToken(PoeFilterParser.RARITY, 0);
            }

            public RarityValueContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_rarityValue; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterRarityValue(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitRarityValue(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitRarityValue(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public RarityValueContext rarityValue()
        {
            RarityValueContext _localctx = new RarityValueContext(_ctx, State);
            EnterRule(_localctx, 4, RULE_rarityValue);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 70;
                    _la = _input.La(1);
                    if (!(_la == RARITY || _la == QUOTERARITY))
                    {
                        _errHandler.RecoverInline(this);
                    }
                    else
                    {
                        Consume();
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class CompareOpNullableContext : ParserRuleContext
        {
            public ITerminalNode COMPAREOP()
            {
                return GetToken(PoeFilterParser.COMPAREOP, 0);
            }

            public CompareOpNullableContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_compareOpNullable; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterCompareOpNullable(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitCompareOpNullable(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitCompareOpNullable(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public CompareOpNullableContext compareOpNullable()
        {
            CompareOpNullableContext _localctx = new CompareOpNullableContext(_ctx, State);
            EnterRule(_localctx, 6, RULE_compareOpNullable);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 73;
                    _la = _input.La(1);
                    if (_la == COMPAREOP)
                    {
                        {
                            State = 72; Match(COMPAREOP);
                        }
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class VisibilityContext : ParserRuleContext
        {
            public ITerminalNode SHOW()
            {
                return GetToken(PoeFilterParser.SHOW, 0);
            }

            public ITerminalNode HIDE()
            {
                return GetToken(PoeFilterParser.HIDE, 0);
            }

            public VisibilityContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_visibility; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterVisibility(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitVisibility(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitVisibility(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public VisibilityContext visibility()
        {
            VisibilityContext _localctx = new VisibilityContext(_ctx, State);
            EnterRule(_localctx, 8, RULE_visibility);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 75;
                    _la = _input.La(1);
                    if (!(_la == SHOW || _la == HIDE))
                    {
                        _errHandler.RecoverInline(this);
                    }
                    else
                    {
                        Consume();
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ParamsContext : ParserRuleContext
        {
            public StrValueContext[] strValue()
            {
                return GetRuleContexts<StrValueContext>();
            }

            public StrValueContext strValue(int i)
            {
                return GetRuleContext<StrValueContext>(i);
            }

            public ParamsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_params; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterParams(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitParams(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitParams(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ParamsContext @params()
        {
            ParamsContext _localctx = new ParamsContext(_ctx, State);
            EnterRule(_localctx, 10, RULE_params);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 77; strValue();
                    State = 81;
                    _errHandler.Sync(this);
                    _la = _input.La(1);
                    while (_la == STR || _la == QUOTESTR)
                    {
                        {
                            {
                                State = 78; strValue();
                            }
                        }
                        State = 83;
                        _errHandler.Sync(this);
                        _la = _input.La(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class DigitsParamsContext : ParserRuleContext
        {
            public ITerminalNode[] DIGITS()
            {
                return GetTokens(PoeFilterParser.DIGITS);
            }

            public ITerminalNode DIGITS(int i)
            {
                return GetToken(PoeFilterParser.DIGITS, i);
            }

            public DigitsParamsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_digitsParams; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterDigitsParams(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitDigitsParams(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitDigitsParams(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public DigitsParamsContext digitsParams()
        {
            DigitsParamsContext _localctx = new DigitsParamsContext(_ctx, State);
            EnterRule(_localctx, 12, RULE_digitsParams);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 84; Match(DIGITS);
                    State = 88;
                    _errHandler.Sync(this);
                    _la = _input.La(1);
                    while (_la == DIGITS)
                    {
                        {
                            {
                                State = 85; Match(DIGITS);
                            }
                        }
                        State = 90;
                        _errHandler.Sync(this);
                        _la = _input.La(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class RariryParamsContext : ParserRuleContext
        {
            public RarityValueContext[] rarityValue()
            {
                return GetRuleContexts<RarityValueContext>();
            }

            public RarityValueContext rarityValue(int i)
            {
                return GetRuleContext<RarityValueContext>(i);
            }

            public RariryParamsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_rariryParams; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterRariryParams(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitRariryParams(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitRariryParams(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public RariryParamsContext rariryParams()
        {
            RariryParamsContext _localctx = new RariryParamsContext(_ctx, State);
            EnterRule(_localctx, 14, RULE_rariryParams);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 91; rarityValue();
                    State = 95;
                    _errHandler.Sync(this);
                    _la = _input.La(1);
                    while (_la == RARITY || _la == QUOTERARITY)
                    {
                        {
                            {
                                State = 92; rarityValue();
                            }
                        }
                        State = 97;
                        _errHandler.Sync(this);
                        _la = _input.La(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SocketParamsContext : ParserRuleContext
        {
            public SocketValueContext[] socketValue()
            {
                return GetRuleContexts<SocketValueContext>();
            }

            public SocketValueContext socketValue(int i)
            {
                return GetRuleContext<SocketValueContext>(i);
            }

            public SocketParamsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_socketParams; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterSocketParams(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitSocketParams(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSocketParams(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SocketParamsContext socketParams()
        {
            SocketParamsContext _localctx = new SocketParamsContext(_ctx, State);
            EnterRule(_localctx, 16, RULE_socketParams);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 98; socketValue();
                    State = 102;
                    _errHandler.Sync(this);
                    _la = _input.La(1);
                    while (_la == SOCKET || _la == QUOTESOCKET)
                    {
                        {
                            {
                                State = 99; socketValue();
                            }
                        }
                        State = 104;
                        _errHandler.Sync(this);
                        _la = _input.La(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class RedContext : ParserRuleContext
        {
            public ITerminalNode DIGITS()
            {
                return GetToken(PoeFilterParser.DIGITS, 0);
            }

            public RedContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_red; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterRed(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitRed(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitRed(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public RedContext red()
        {
            RedContext _localctx = new RedContext(_ctx, State);
            EnterRule(_localctx, 18, RULE_red);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 105; Match(DIGITS);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class GreenContext : ParserRuleContext
        {
            public ITerminalNode DIGITS()
            {
                return GetToken(PoeFilterParser.DIGITS, 0);
            }

            public GreenContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_green; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterGreen(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitGreen(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitGreen(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public GreenContext green()
        {
            GreenContext _localctx = new GreenContext(_ctx, State);
            EnterRule(_localctx, 20, RULE_green);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 107; Match(DIGITS);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class BlueContext : ParserRuleContext
        {
            public ITerminalNode DIGITS()
            {
                return GetToken(PoeFilterParser.DIGITS, 0);
            }

            public BlueContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_blue; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterBlue(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitBlue(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitBlue(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public BlueContext blue()
        {
            BlueContext _localctx = new BlueContext(_ctx, State);
            EnterRule(_localctx, 22, RULE_blue);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 109; Match(DIGITS);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class AlphaContext : ParserRuleContext
        {
            public ITerminalNode DIGITS()
            {
                return GetToken(PoeFilterParser.DIGITS, 0);
            }

            public AlphaContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_alpha; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterAlpha(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitAlpha(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitAlpha(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public AlphaContext alpha()
        {
            AlphaContext _localctx = new AlphaContext(_ctx, State);
            EnterRule(_localctx, 24, RULE_alpha);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 112;
                    _la = _input.La(1);
                    if (_la == DIGITS)
                    {
                        {
                            State = 111; Match(DIGITS);
                        }
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ColorContext : ParserRuleContext
        {
            public RedContext red()
            {
                return GetRuleContext<RedContext>(0);
            }

            public GreenContext green()
            {
                return GetRuleContext<GreenContext>(0);
            }

            public BlueContext blue()
            {
                return GetRuleContext<BlueContext>(0);
            }

            public AlphaContext alpha()
            {
                return GetRuleContext<AlphaContext>(0);
            }

            public ColorContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_color; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterColor(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitColor(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitColor(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ColorContext color()
        {
            ColorContext _localctx = new ColorContext(_ctx, State);
            EnterRule(_localctx, 26, RULE_color);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 114; red();
                    State = 115; green();
                    State = 116; blue();
                    State = 117; alpha();
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                _errHandler.ReportError(this, re);
                _errHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class PoeClassContext : ParserRuleContext
        {
            public ParamsContext @params()
            {
                return GetRuleContext<ParamsContext>(0);
            }

            public PoeClassContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }

            public override int RuleIndex { get { return RULE_poeClass; } }

            public override void EnterRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.EnterPoeClass(this);
            }

            public override void ExitRule(IParseTreeListener listener)
            {
                IPoeFilterListener typedListener = listener as IPoeFilterListener;
                if (typedListener != null) typedListener.ExitPoeClass(this);
            }

            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IPoeFilterVisitor<TResult> typedVisitor = visitor as IPoeFilterVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitPoeClass(this);
                else return visitor.VisitChildren(this);
            }
        }
